tests/fixtures/grammar/negative/trailing-garbage.asfl
module SYSTEM_Bad;
var x: nat;
end_module @@@ invalid
